--- a/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipApplication/_workExperiencesJS.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipApplication/_workExperiencesJS.cshtml
@@ -77,12 +77,12 @@
                     <div class="grid-3-4">
                         <div id="work-history-item" class="grid-row work-history-item">
                             <div class="work-controls">
-                                <div class="work-edit ta-center">
+                                <div class="work-edit sfa-align-center">
 
                                     <a href="#" class="fake-link cell-span" data-bind="if: showEditButton, click: $parent.editWorkExperience">Edit</a>
                                     <a href="#" class="fake-link cell-span" data-bind="ifnot: showEditButton,click: $parent.saveWorkExperience">Save</a>
                                 </div>
-                                <div class="work-delete ta-center">
+                                <div class="work-delete sfa-align-center">
                                     <span class="cell-span">
                                         <i class="font-xsmall fa fa-times-circle icon-black remove-work-experience-link" data-bind="click: $parent.removeWorkExperience"></i>
                                         <i class="visuallyhidden">Remove</i>
