--- a/src/SFA.Apprenticeships.Web.Candidate/Views/Register/Complete.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/Register/Complete.cshtml
@@ -9,7 +9,7 @@
     <legend class="heading-large">Confirmation email sent</legend>
     <div class="form-group text">
         <p>
-            Your confirmation email has been sent to <strong>@Model</strong>
+            Your confirmation email has been sent to <span class="bold-small">@Model</span>
         </p>
     </div>
     <div class="form-group">
