--- a/src/SFA.Apprenticeships.Web.Candidate/Views/Shared/_LoginPartial.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/Shared/_LoginPartial.cshtml
@@ -10,7 +10,7 @@
             <span class="your-name" id="bannerUserName">@fullName</span>
             <a id="signout-link" href="@Url.RouteUrl(RouteNames.SignOut)"><i class="fa fa-sign-out"></i>Sign out</a>
         </div>
-        <div class="sfa-navigation-links">
+        <div class="sfa-navigation-items">
             <a id="savedapplications-link" href="@(Url.RouteUrl(CandidateRouteNames.MyApplications))#dashDrafts"></a>
             <a id="myapplications-link" href="@Url.RouteUrl(CandidateRouteNames.MyApplications)">My applications<span id="dashUpdatesNumber"></span></a>
             <a id="mysettings-link" href="@Url.RouteUrl(CandidateRouteNames.Settings)">Settings</a>
