--- a/src/SFA.Apprenticeships.Web.Manage/Views/AgencyUser/_DashboardVacancySummaries.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/AgencyUser/_DashboardVacancySummaries.cshtml
@@ -125,7 +125,7 @@
                                     <td class="reactive-header" data-label="Closing date">
                                         @vacancy.ClosingDate.ToFriendlyClosingToday()
                                     </td>
-                                    <td class="ta-center reactive-header" data-label="Submission count">
+                                    <td class="sfa-align-center reactive-header" data-label="Submission count">
                                         @vacancy.SubmissionCount
                                     </td>
                                     <td>
