--- a/src/SFA.Apprenticeships.Web.Candidate/Views/TraineeshipApplication/_trainingCoursesJS.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/TraineeshipApplication/_trainingCoursesJS.cshtml
@@ -63,11 +63,11 @@
                     <div class="grid-3-4">
                         <div id="training-history-item" class="grid-row training-history-item">
                             <div class="training-controls">
-                                <div class="training-edit ta-center">
+                                <div class="training-edit sfa-align-center">
                                     <a href="#" class="fake-link cell-span" data-bind="if: showEditButton, click: $parent.editTrainingCourse">Edit</a>
                                     <a href="#" class="fake-link cell-span" data-bind="ifnot: showEditButton,click: $parent.saveTrainingCourse">Save</a>
                                 </div>
-                                <div class="training-delete ta-center">
+                                <div class="training-delete sfa-align-center">
                                     <span class="cell-span">
                                         <i class="font-xsmall fa fa-times-circle icon-black remove-training-history-item-link" data-bind="click: $parent.removeTrainingCourse"></i>
                                         <i class="visuallyhidden">Remove</i>
