--- a/src/SFA.Apprenticeships.Web.Manage/Views/Admin/ApiUser.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Admin/ApiUser.cshtml
@@ -17,7 +17,7 @@
             <li>External System ID (Username): @Model.ExternalSystemId</li>
             @if (!string.IsNullOrEmpty(Model.Password))
             {
-                <li>Password: @Model.Password <strong>Copy this down immediately! It will not be shown again. Please add it to the API Users.xlsx spreadsheet in the private repository</strong></li>
+                <li>Password: @Model.Password <span class="bold-small">Copy this down immediately! It will not be shown again. Please add it to the API Users.xlsx spreadsheet in the private repository</span></li>
             }
             <li>Company ID: @Model.CompanyId</li>
             <li>Company Name: @Model.CompanyName</li>
