--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/_AnonymousLayout.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/_AnonymousLayout.cshtml
@@ -77,7 +77,7 @@
             <div class="banner-container">
                 <div class="phase-notice gov-border grid-row">
                     <div class="column-one-half">
-                        <strong class="beta__label">Beta</strong>
+                        <strong class="beta__label">Beta</span>
                         @if (Request.IsAuthenticated)
                         {
                             <span>This is a new service – your <a rel="external" href="https://www.surveymonkey.co.uk/r/LB5ZJRM" target="_blank">feedback</a> helps improve it.</span>
