Fixed up the last of the joyride styles

--- a/src/SFA.Apprenticeships.Web.Common/Content/scss/styles.scss
+++ b/src/SFA.Apprenticeships.Web.Common/Content/scss/styles.scss
@@ -11,6 +11,8 @@
 @import "_select2-styles";
 @import "_address-service-styles";
 
+@import "_joyride-styles";
+
 $path: "/Content/_assets/img/";
 $warning-colour: #2b8cc4;
 
