--- a/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipApplication/View.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipApplication/View.cshtml
@@ -10,12 +10,12 @@
     <div class="column-two-thirds">
         <h1 class="heading-xlarge">Your application</h1>
     </div>
-    <div class="column-one-third">
-        <div class="page-link hide-nojs">
-            <p>
-                <a class="print-trigger" href=""><i class="fa fa-print"></i>Print this page</a>
-            </p>
-        </div>
+    <div class="column-one-third sfa-align-right-tablet sfa-xlarge-top-margin">
+        <ul class="list">
+            <li>
+                <a class="print-trigger hide-nojs" href=""><i class="fa fa-print"></i>Print this page</a>
+            </li>
+        </ul>
     </div>
 </div>
 
