--- a/src/SFA.Apprenticeships.Web.Candidate/Views/Home/Helpdesk.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/Home/Helpdesk.cshtml
@@ -5,8 +5,10 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="hgroup">
-    <h1 class="heading-xlarge">Contact us</h1>
+<div class="grid-row">
+    <div class="column-two-thirds">
+        <h1 class="heading-xlarge">Contact us</h1>
+    </div>
 </div>
 
 @using (Html.BeginRouteForm(CandidateRouteNames.Helpdesk, FormMethod.Post))
