--- a/src/SFA.Apprenticeships.Web.Candidate/Views/Shared/_TermsAndConditions.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/Shared/_TermsAndConditions.cshtml
@@ -1,4 +1,4 @@
-﻿<section class="text">
+﻿<section>
     <p>By using this service you agree to these terms and conditions.</p>
 
     <h3 class="heading-large">
@@ -20,7 +20,7 @@
     </ul>
 </section>
 
-<section class="text">
+<section>
     <h3 class="heading-large">What happens if you misuse your account</h3>
 
     <p>We may delete your account if you:</p>
