--- a/src/SFA.Apprenticeships.Web.Manage/Views/Home/ContactUs.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Home/ContactUs.cshtml
@@ -2,6 +2,8 @@
     ViewBag.Title = "Contact us - Agency home";
 }
 
-<div class="hgroup">
-    <h1 class="heading-xlarge">Contact us</h1>
+<div class="grid-row">
+    <div class="column-two-thirds">
+        <h1 class="heading-xlarge">Contact us</h1>
+    </div>
 </div>
