--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Home/Index.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Home/Index.cshtml
@@ -21,7 +21,7 @@
     </section>
     <section class="column-one-third gov-border">
         <br>
-        <ul class="list-text">
+        <ul class="list">
             <li>
                 <a href="/recruitment/info-expect-from-employer.html">Responsibilities of the employer</a>
             </li>
