--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/AddEmployer.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/AddEmployer.cshtml
@@ -4,11 +4,12 @@
     ViewBag.Title = "Recruit an Apprentice - Create New Vacancy - Add Employer";
 }
 <div class="grid-row">
-    <div class="hgroup">
+    <div class="column-two-thirds">
         <h1 class="heading-xlarge">
             Search for employer
         </h1>
     </div>
+
     <div class="blocklabel-single-container">
         
         @using (Html.BeginRouteForm(RecruitmentRouteNames.AddEmployer, FormMethod.Get))
