--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/ConfirmEmployer.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/ConfirmEmployer.cshtml
@@ -12,7 +12,7 @@
 }
 
 <div class="grid-row">
-    <div class="hgroup">
+    <div class="column-two-thirds">
         <h1 class="heading-xlarge">
             Check employer information
         </h1>
