--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SelectNewEmployer.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SelectNewEmployer.cshtml
@@ -17,7 +17,7 @@
 }
 
 <div class="grid-row">
-    <div class="hgroup">
+    <div class="column-two-thirds">
         <h1 class="heading-xlarge">
             Link to a new employer
         </h1>
