--- a/src/SFA.Apprenticeships.Web.Candidate/Views/Account/Settings.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/Account/Settings.cshtml
@@ -7,16 +7,21 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <div class="grid-row">
-    <div class="column-one-half">
+    <div class="column-two-thirds">
         <h1 class="heading-xlarge">Settings</h1>
     </div>
-    <div class="column-one-half">
-        @Html.RouteLink("Find an apprenticeship", CandidateRouteNames.ApprenticeshipSearch, null, new { id = "find-apprenticeship-link", @class = "page-link sfa-small-bottom-margin" })
-
-        @if (Model!=null && Model.TraineeshipFeature!=null && Model.TraineeshipFeature.ShowTraineeshipsLink)
-        {
-            @Html.RouteLink("Find a traineeship", CandidateRouteNames.TraineeshipSearch, null, new { id = "find-traineeship-link", @class = "page-link sfa-small-bottom-margin" })
-        }
+    <div class="column-one-third sfa-align-right-tablet sfa-xlarge-top-margin">
+        <ul class="list">
+            <li>
+                @Html.RouteLink("Find an apprenticeship", CandidateRouteNames.ApprenticeshipSearch, null, new { id = "find-apprenticeship-link" })
+            </li>
+            @if (Model != null && Model.TraineeshipFeature != null && Model.TraineeshipFeature.ShowTraineeshipsLink)
+            {
+                <li>
+                    @Html.RouteLink("Find a traineeship", CandidateRouteNames.TraineeshipSearch, null, new { id = "find-traineeship-link" })
+                </li>
+            }
+        </ul>
     </div>
 </div>
 
