--- a/src/SFA.Apprenticeships.Web.Candidate/Views/TraineeshipApplication/View.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/TraineeshipApplication/View.cshtml
@@ -9,12 +9,12 @@
     <div class="column-two-thirds">
         <h1 class="heading-xlarge">Your application</h1>
     </div>
-    <div class="column-one-third">
-        <div class="page-link hide-nojs">
-            <p>
+    <div class="column-one-third sfa-xlarge-top-margin sfa-align-right-tablet">
+        <ul class="list">
+            <li class="hide-nojs">
                 <a class="print-trigger" href=""><i class="fa fa-print"></i>Print this page</a>
-            </p>
-        </div>
+            </li>
+        </ul>
     </div>
 </div>
 
