--- a/src/SFA.Apprenticeships.Web.Common/Content/scss/_sfa-custom-layouts.scss
+++ b/src/SFA.Apprenticeships.Web.Common/Content/scss/_sfa-custom-layouts.scss
@@ -19,9 +19,9 @@ SFA navigation
         }
         .sfa-navigation-items {
             a{
-                padding:0 5px 0 0;
+                margin:0 5px 0 0;
                 @include media(desktop){
-                    padding:0 0 0 5px;
+                    margin:0 0 0 5px;
                 }
             }
         }
@@ -82,6 +82,10 @@ Hide element (window size)
             display:none;
         }
     }
+}
+
+.sfa-hide {
+    display:none;   
 }
 
 /* -------------------------------------------------------------------
@@ -249,6 +253,11 @@ Misc - TO BE ORGANISED
 
 .sfa-align-right {
     text-align:right;
+    &-tablet {
+        @include media(tablet){
+            text-align:right;
+        }
+    }
 }
 
 .sfa-align-center {
