--- a/src/SFA.Apprenticeships.Web.Manage/Views/Home/Index.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Home/Index.cshtml
@@ -4,17 +4,19 @@
 }
 
 <div class="grid-row">
-    <section class="column-two-thirds">
-        <div class="inner-block-padr">
-            <h1 class="heading-xlarge">
-                Recruitment
-            </h1>
-            <p>
-                Review vacancies, search for providers, search for candidates...
-            </p>
-            <div class="get-started form-group">
-                <a href="@Url.RouteUrl(ManagementRouteNames.SignIn)" class="button">Agency</a>
-            </div>
+    <div class="column-two-thirds">
+        <h1 class="heading-xlarge">
+            Recruitment
+        </h1>
+    </div>
+</div>
+<div class="grid-row">
+    <div class="column-two-thirds">
+        <p>
+            Review vacancies, search for providers, search for candidates...
+        </p>
+        <div class="get-started form-group">
+            <a href="@Url.RouteUrl(ManagementRouteNames.SignIn)" class="button">Agency</a>
         </div>
-    </section>
+    </div>
 </div>
