--- a/src/SFA.Apprenticeships.Web.Manage/Views/Shared/_Layout.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Shared/_Layout.cshtml
@@ -127,7 +127,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="grid-row">
                     <div class="column-half">
                         <p>
-                            <strong class="phase-tag">BETA</span>
+                            <strong class="phase-tag">BETA</strong>
                             <span>This is a new service - your <a href="https://www.surveymonkey.co.uk/r/QLQTJQC">feedback</a> helps improve it.</span>
                         </p>
                     </div>
