--- a/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/EmployerInformation.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/EmployerInformation.cshtml
@@ -10,7 +10,7 @@
 }
 
 <div class="grid-row">
-    <div class="hgroup">
+    <div class="column-two-thirds">
         <h1 class="heading-xlarge">
             Check employer information
         </h1>
