--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/_Layout.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/_Layout.cshtml
@@ -134,7 +134,7 @@
                 <div class="grid-row">
                     <div class="column-one-half">
                         <p>
-                            <strong class="phase-tag">BETA</span>
+                            <strong class="phase-tag">BETA</strong>
                             <span>This is a new service - your <a href="https://www.surveymonkey.co.uk/r/LB5ZJRM">feedback</a> helps improve it.</span>
                         </p>
                     </div>
